# realtime_avatar

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  visemes.json  visemes.py
SemanticGuidedHumanMatting/: inference.py
SemanticGuidedHumanMatting/utils/: util.py
conf/: demo.yaml
head_segmentation/head_segmentation/: segmentation_pipeline.py
image_lib/: README.md  extract_torso.py  face_regions_extraction.py  get_crop_coordinates.py  get_faces_landmarks.py  main.py  process_image.py  requirements.txt  segment_face.py
modules/: Readme.md  align_images.py  driver_video_processor.py  requirements.txt  video_generator.py  video_writer.py
tests/: change_background.py  doit.py  test_1.py  test_2.py  test_3.py
tts/: azure.py
utils/: stillvideo.py
